[gd_scene load_steps=13 format=3 uid="uid://4kkpvhifi881"]

[ext_resource type="Script" uid="uid://dc5170xyds48g" path="res://scripts/common/mainMenu.gd" id="1_1bltu"]
[ext_resource type="AudioStream" uid="uid://dmt3vfb2d1qo0" path="res://assets/common/main_music.mp3" id="2_0is7p"]
[ext_resource type="Texture2D" uid="uid://jttgffsi34eg" path="res://assets/common/menu.png" id="2_4ddm4"]
[ext_resource type="Texture2D" uid="uid://cn6v47wxjbaqi" path="res://assets/common/door.png" id="3_4ddm4"]
[ext_resource type="Theme" uid="uid://bpcln3x4i8if6" path="res://assets/common/mainMenu.tres" id="3_g4dbv"]
[ext_resource type="Texture2D" uid="uid://b4xudoi6esl13" path="res://assets/common/keepup.png" id="4_xmut3"]
[ext_resource type="Texture2D" uid="uid://stid35knijf4" path="res://assets/common/gear.png" id="5_xmut3"]
[ext_resource type="PackedScene" uid="uid://qxbew036jj7d" path="res://scenes/common/settings_menu.tscn" id="7_g4dbv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xmut3"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ddm4"]
bg_color = Color(0.6, 0.6, 0.6, 0.152941)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g4dbv"]
bg_color = Color(0.6, 0.6, 0.6, 0.223529)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hnixr"]
bg_color = Color(0, 0, 0, 0)

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_1bltu")
music = ExtResource("2_0is7p")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4ddm4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1089, 638)
scale = Vector2(0.35, 0.35)
texture = ExtResource("4_xmut3")

[node name="Play" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -315.0
offset_top = -130.0
offset_right = -70.0
offset_bottom = -33.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxFlat_xmut3")
theme_override_styles/hover = SubResource("StyleBoxFlat_4ddm4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g4dbv")
theme_override_styles/normal = SubResource("StyleBoxFlat_hnixr")

[node name="Quit" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -122.0
offset_top = 20.0
offset_right = -82.0
offset_bottom = 71.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_g4dbv")
icon = ExtResource("3_4ddm4")
flat = true
expand_icon = true

[node name="SettingsButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -189.0
offset_top = 21.0
offset_right = -140.0
offset_bottom = 69.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_g4dbv")
icon = ExtResource("5_xmut3")
flat = true
expand_icon = true

[node name="SettingsMenu" parent="." instance=ExtResource("7_g4dbv")]

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="onCloseRequest" from="SettingsMenu" to="." method="_settings_menu_on_close_request"]
